# RGL-Samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  iosLaunchScreen.storyboard
.github/workflows/: build.yml  web.yml
01-HelloTriangle/: hellotriangle.cpp  main.cpp  triangle.frag  triangle.vert
02-Cubes/: cubes.cpp  cubes.frag  cubes.vert  main.cpp
03-Imgui/: imgui.cpp
04-Deferred/: deferred.cpp  deferred.frag  deferred.vert  dirlight.frag  final.frag  screentri.vert  selection.frag
05-XR/: xr.cpp  xr.frag  xr.vert
06-Asteroids/: asteroid.comp  asteroid.frag  asteroid.vert  asteroid_common.glsl  asteroids.cpp  planet.frag  ring.frag  shared.h  vertex.vert
07-Mipmap/: mipmap.cpp  mipmap.frag  mipmap_colorset.comp
08-Cubemap/: cubemap.cpp  cubemap.frag  cubemap.vert
09-BindlessTexturing/: bindlesstexturing.cpp  btex.frag  btex.vert
Assets/: asteroid.ma  planet.ma
Common/: App.cpp  App.hpp  AppleFns.hpp  AppleFns.mm  ExampleFramework.cpp  ExampleFramework.hpp
HelloTriangle/: main.cpp  triangle.vert
config/: init-ios.sh  init-linux.sh  init-mac.sh  init-tvos.sh  init-uwp.bat  init-web.bat  init-web.sh  init-win.bat  init-winarm.bat
